Fix nav toggle background on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -749,6 +749,7 @@ MENU
 }
 
 .fixed-nav-dark .navbar-toggle {
+    background: #505050;
     margin-bottom: 12px;
     margin-top: 13px;
 }
